Fixed some major sonar warnings in yang.data.impl.leafref
Change-Id: I45495a4a4a8266012e136984dbf0c049c74eab52
Signed-off-by: Tony Tkacik <ttkacik@cisco.com>